updated parameter name 'body' to 'details'

--- a/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations-authoring.json
@@ -160,7 +160,7 @@
             "maxLength": 100
           },
           {
-            "name": "body",
+            "name": "details",
             "in": "body",
             "description": "The request body",
             "required": true,
@@ -303,7 +303,7 @@
             "maxLength": 100
           },
           {
-            "name": "body",
+            "name": "details",
             "in": "body",
             "description": "The copy project info.",
             "required": true,
@@ -501,7 +501,7 @@
             "x-ms-client-name": "ExportedProjectFormat"
           },
           {
-            "name": "body",
+            "name": "exportedProject",
             "in": "body",
             "description": "The project data to import.",
             "required": true,
@@ -554,7 +554,7 @@
             "maxLength": 100
           },
           {
-            "name": "body",
+            "name": "details",
             "in": "body",
             "description": "The training input parameters.",
             "required": true,
@@ -755,7 +755,7 @@
             "type": "string"
           },
           {
-            "name": "body",
+            "name": "details",
             "in": "body",
             "description": "The new deployment info.",
             "required": true,
@@ -864,7 +864,7 @@
             "type": "string"
           },
           {
-            "name": "body",
+            "name": "details",
             "in": "body",
             "description": "The options for deleting the deployment.",
             "required": true,
@@ -1023,7 +1023,7 @@
             "maxLength": 100
           },
           {
-            "name": "body",
+            "name": "details",
             "in": "body",
             "description": "The job object to swap two deployments.",
             "required": true,
@@ -1359,7 +1359,7 @@
             "type": "string"
           },
           {
-            "name": "body",
+            "name": "details",
             "in": "body",
             "description": "The training input parameters.",
             "required": true,
@@ -1727,7 +1727,7 @@
             "maxLength": 100
           },
           {
-            "name": "body",
+            "name": "details",
             "in": "body",
             "description": "The new project resources info.",
             "required": true,
@@ -1780,7 +1780,7 @@
             "maxLength": 100
           },
           {
-            "name": "body",
+            "name": "details",
             "in": "body",
             "description": "The info for the deployment resources to be deleted.",
             "required": true,
