--- a/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations-authoring.json
@@ -160,7 +160,7 @@
             "maxLength": 100
           },
           {
-            "name": "body",
+            "name": "details",
             "in": "body",
             "description": "The request body",
             "required": true,
@@ -401,7 +401,7 @@
             "x-ms-client-name": "ExportedProjectFormat"
           },
           {
-            "name": "body",
+            "name": "exportedProject",
             "in": "body",
             "description": "The project data to import.",
             "required": true,
@@ -454,7 +454,7 @@
             "maxLength": 100
           },
           {
-            "name": "body",
+            "name": "details",
             "in": "body",
             "description": "The training input parameters.",
             "required": true,
@@ -609,7 +609,7 @@
             "type": "string"
           },
           {
-            "name": "body",
+            "name": "details",
             "in": "body",
             "description": "The new deployment info.",
             "required": true,
@@ -764,7 +764,7 @@
             "maxLength": 100
           },
           {
-            "name": "body",
+            "name": "details",
             "in": "body",
             "description": "The job object to swap two deployments.",
             "required": true,
