--- a/specification/cognitiveservices/data-plane/Language/preview/2024-11-15-preview/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2024-11-15-preview/analyzeconversations-authoring.json
@@ -62,7 +62,7 @@
   "paths": {
     "/authoring/analyze-conversations/projects": {
       "get": {
-        "operationId": "ConversationAuthoringProjects_ListProjects",
+        "operationId": "ListProjects",
         "description": "Lists the existing projects.",
         "parameters": [
           {
