--- a/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations-authoring.json
@@ -2139,7 +2139,7 @@
     },
     "/authoring/analyze-conversations/projects/global/languages": {
       "get": {
-        "operationId": "ConversationAuthoringProjects_ListSupportedLanguages",
+        "operationId": "ListSupportedLanguages",
         "description": "Lists the supported languages for the given project type.",
         "parameters": [
           {
