moved listAllDeployments, listAssignedResourceDeployments ets. out of interfaces

--- a/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations-authoring.json
@@ -492,7 +492,7 @@
     },
     "/authoring/analyze-conversations/projects/{projectName}/deployments": {
       "get": {
-        "operationId": "ConversationAuthoringDeployments_ListDeployments",
+        "operationId": "ListDeployments",
         "description": "Lists the deployments belonging to a project.",
         "parameters": [
           {
@@ -1521,7 +1521,7 @@
     },
     "/authoring/analyze-conversations/projects/global/prebuilt-entities": {
       "get": {
-        "operationId": "ConversationAuthoringProjects_ListSupportedPrebuiltEntities",
+        "operationId": "ListSupportedPrebuiltEntities",
         "description": "Lists the supported prebuilt entities that can be used while creating composed entities.",
         "parameters": [
           {
@@ -1570,7 +1570,7 @@
     },
     "/authoring/analyze-conversations/projects/global/training-config-versions": {
       "get": {
-        "operationId": "ConversationAuthoringProjects_ListTrainingConfigVersions",
+        "operationId": "ListTrainingConfigVersions",
         "description": "Lists the support training config version for a given project type.",
         "parameters": [
           {
