--- a/specification/cognitiveservices/data-plane/Language/preview/2024-11-15-preview/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2024-11-15-preview/analyzeconversations-authoring.json
@@ -1153,7 +1153,7 @@
     },
     "/authoring/analyze-conversations/projects/{projectName}/exported-models": {
       "get": {
-        "operationId": "ConversationAuthoringModels_ListExportedModels",
+        "operationId": "ListExportedModels",
         "description": "Lists the exported models belonging to a project.",
         "parameters": [
           {
@@ -1454,7 +1454,7 @@
     },
     "/authoring/analyze-conversations/projects/{projectName}/models": {
       "get": {
-        "operationId": "ConversationAuthoringModels_ListTrainedModels",
+        "operationId": "ListTrainedModels",
         "description": "Lists the trained models belonging to a project.",
         "parameters": [
           {
@@ -2165,7 +2165,7 @@
     },
     "/authoring/analyze-conversations/projects/{projectName}/train/jobs": {
       "get": {
-        "operationId": "ConversationAuthoringProjects_ListTrainingJobs",
+        "operationId": "ListTrainingJobs",
         "description": "Lists the non-expired training jobs created for a project.",
         "parameters": [
           {
