adjust the testing json to fix Swagger Avocado

--- a/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations-authoring.json
@@ -848,6 +848,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful Deploy Project": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulDeployProject.json"
+          }
+        },
         "x-ms-long-running-operation": true
       },
       "delete": {
@@ -1341,6 +1346,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Successful List Models": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulListModels.json"
           }
         },
         "x-ms-pageable": {
@@ -2171,6 +2181,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Successful Get Train Status": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetTrainStatus.json"
           }
         }
       }
