--- a/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations-authoring.json
@@ -687,6 +687,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful Deploy Project": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulDeployProject.json"
+          }
+        },
         "x-ms-long-running-operation": true
       },
       "delete": {
